fabric/testdata/out/ing_spp-perf-test-brand-service-delete-api-brands-id-media-id-service-stupssppbrandserviceloadtest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/brands/:id/media/:id\") \u0026\u0026 Method(\"DELETE\") \u0026\u0026
      JWTPayloadAllKV(\"sub\", \"stups_spp-brand-service-loadtest\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"9936f518-b27d-4026-8b40-19228e2474b0","deployment-id":"d-obwi5hseno4by2atnnq3bsppj","pipeline-id":"l-2h6c8pup1xcoztczupk4ssdby"},"name":"spp-perf-test-brand-service-delete-api-brands-id-media-id-service-stupssppbrandserviceloadtest","namespace":"default"},"spec":{"rules":[{"host":"spp-perf-test-brand-service.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-perf-test-brand-service","s [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(4) && Path("/api/brands/:id/media/:id")
      && Method("DELETE") && JWTPayloadAllKV("sub", "stups_spp-brand-service-loadtest")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2020-10-27T16:21:16Z"
  generation: 1
  labels:
    controller-uid: 9936f518-b27d-4026-8b40-19228e2474b0
    deployment-id: d-obwi5hseno4by2atnnq3bsppj
    pipeline-id: l-2h6c8pup1xcoztczupk4ssdby
  name: spp-perf-test-brand-service-delete-api-brands-id-media-id-service-stupssppbrandserviceloadtest
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-perf-test-brand-service
    uid: 9936f518-b27d-4026-8b40-19228e2474b0
  resourceVersion: "1357489241"
  uid: 73e4f8c7-5e3c-4e99-8cf7-6cb71a9c3e0a
spec:
  rules:
  - host: spp-perf-test-brand-service.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-perf-test-brand-service
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
